--- a/SIGOFCv3/Areas/Supervision/Views/ManInforme/AddEdit.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/ManInforme/AddEdit.cshtml
@@ -498,6 +498,14 @@
 <div class="modal fade hide" id="mdlManInforme_VerticeArea" tabindex="-1" role="dialog"></div>
 @* Para el modal _EvaluacionArbol usado en el control _renderEvalArbolAdicional y _renderEvalArbolNoAutorizado *@
 <div class="modal fade hide" id="mdlManInforme_EvaluacionArbol" role="dialog"></div>
+@* Para el modal _EspecieForEst usado en el control _renderEspecieForEst *@
+<div class="modal fade hide" id="mdlManInforme_EspecieForEst" role="dialog"></div>
+@* Para el modal _ActividadProd usado en el control _renderActividadProd *@
+<div class="modal fade hide" id="mdlManInforme_ActividadProd" role="dialog"></div>
+@* Para el modal _CoberturaBosNat usado en el control _renderCoberturaBosNat *@
+<div class="modal fade hide" id="mdlManInforme_CoberturaBosNat" role="dialog"></div>
+@* Para el modal _DivisionPredio usado en el control _renderDivisionPredio *@
+<div class="modal fade hide" id="mdlManInforme_DivisionPredio" role="dialog"></div>
 @* Para el modal _Huayrona usado en el control _renderHuayrona *@
 <div class="modal fade hide" id="mdlManInforme_Huayrona" tabindex="-1" role="dialog"></div>
 @* Para el modal _ActividadSilvicultural usado en el control _renderActividadSilvicultural *@
