--- a/SIGOFCv3/Areas/Supervision/Views/ManInforme/Render/_renderEspecieForEst.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/ManInforme/Render/_renderEspecieForEst.cshtml
@@ -19,7 +19,7 @@
         options = {
             page_length: 10, row_index: true, row_edit: true, row_fnEdit: "_renderEspecieForEst.fnAddEdit(this)"
             , row_delete: true, row_fnDelete: "_renderEspecieForEst.fnDelete(this)"
-           // , button_copy: true, button_csv: true, button_excel: true, button_pdf: true, button_print: true
+            , button_copy: true, button_csv: true, button_excel: true, button_pdf: true, button_print: true
             , export_title: $("#tbRenderEspecieForEst").find("thead tr")[0].innerText.trim()
             , page_sort: true
             , data:null
@@ -69,7 +69,7 @@
         rows = _renderEspecieForEst.dtEspecieForEst.$("tr");
         countFilas = rows.length;
         if (countFilas > 0) {
-            utilSigo.dialogConfirm("", "Está seguro de Eliminar Todos los Registros?", function (r) {
+            utilSigo.dialogConfirm("", "Está seguro de eliminar todos los registros?", function (r) {
                 if (r) {
                     $.each(rows, function (i, o) {
                         data = _renderEspecieForEst.dtEspecieForEst.row($(o)).data();
@@ -82,7 +82,9 @@
                     });
                     _renderEspecieForEst.dtEspecieForEst.clear().draw();
                 }
+                utilSigo.toastSuccess("Exito", "Se eliminó todos los registros con éxito");
             });
+            
         } else {
             utilSigo.toastWarning("Aviso", "No se encontraron registros a eliminar");
         }
@@ -98,7 +100,8 @@
                 COD_SECUENCIAL: data["COD_SECUENCIAL"]
             });
         }
-        _renderEspecieForEst.dtEspecieForEst.row($(obj).parents('tr')).remove().draw(false);
+        _renderEspecieForEst.dtEspecieForEst.row($(obj).parents('tr')).remove().draw(false);        
+        utilSigo.toastSuccess("Exito", "Se eliminó el registro con éxito");
     }
 
     _renderEspecieForEst.fnImport = function (e, obj) {
@@ -150,7 +153,7 @@
         <table id="tbRenderEspecieForEst" style="width:100%;margin:0px !important;" class="table table-hover table-bordered">
             <thead>
                 <tr>
-                    <th colspan="12" class="text-sm-left">
+                    <th colspan="13" class="text-sm-left">
                         <div class="form-inline">
                             <i class="fa mx-2 fa-lg fa-file-o" style="cursor:pointer;" onclick="_renderEspecieForEst.fnAddEdit('');" data-toggle="tooltip" data-placement="top" title="Nuevo"></i>
                             <i class="fa mx-2 fa-lg fa-window-close-o" style="cursor:pointer;" onclick="_renderEspecieForEst.fnDeleteAll();" data-toggle="tooltip" data-placement="top" title="Eliminar Todos"></i>
@@ -166,12 +169,13 @@
                     <th></th>
                     <th></th>
                     <th></th>
+                    <th></th>
                     <th style="text-align: center;">Especie Forestal Registro Plantación</th>
                     <th style="text-align: center;">Especie Forestal Supervisión</th>
                     <th colspan="2" style="text-align: center;">Coordenadas UTM(Registro Plantación)</th>
                     <th colspan="2" style="text-align: center;">Coordenadas UTM(Supervisión)</th>
                     <th colspan="2" style="text-align: center;">Medidas Dasométricas</th>
-                    <th>Observaciones</th>
+                    <th></th>
                 </tr>                
             </thead>
             <tbody></tbody>
