--- a/SIGOFCv3/Areas/Supervision/Views/ManInforme/_DivisionPredio.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/ManInforme/_DivisionPredio.cshtml
@@ -9,50 +9,32 @@
         </div>
         <div class="modal-body">
             <form id="frmItemDivisionPredio">
+                @Html.Hidden("hdfRegEstado")
+                @Html.Hidden("hdfCodSecuencial")
                 <div class="form-row">
                     <div class="form-group col-md-12">
                         <label for="txtDivisionInternaDP" class="text-small">División Interna</label>
-                        <textarea id="txtDivisionInternaDP" class="form-control form-control-sm" maxlength="200" rows = "2" onkeypress="return utilSigo.checkLetter(event)">@Model.DIVISION_INTERNA</textarea>                        
-                    </div>
-                </div>
-                <div class="form-row">
-                    <div class="form-group col-md-4">
-                        <label for="txtACoordEsteDP" class="text-small">Coordenadas Este</label>                        
-                        <textarea id="txtACoordEsteDP" class="form-control form-control-sm" maxlength="400" rows = "4" disabled = "disabled">@Model.COORDENADA_ESTE</textarea>                        
-                    </div>
-                    <div class="form-group col-md-4">
-                        <label for="txtACoordNorteDP" class="text-small">Coordenadas Norte</label>
-                        <textarea id="txtACoordNorteDP" class="form-control form-control-sm" maxlength="400" rows="4" disabled="disabled">@Model.COORDENADA_NORTE</textarea>                        
-                    </div>
-                    <div class="form-group col-md-4">
-                        <label for="txtAAltidudDP" class="text-small">Altitudes</label>
-                        <textarea id="txtAAltidudDP" class="form-control form-control-sm" maxlength="400" rows="4" disabled="disabled">@Model.ALTITUD</textarea>                        
+                        @Html.TextBox("txtDivisionInternaDP", "", new { @class = "form-control form-control-sm", maxlength = "200", onkeypress = "return utilSigo.checkLetter(event)" })
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-4">
                         <label for="txtCoordEsteDP" class="text-small">Coordenada Este</label>
-                        <input id="txtCoordEsteDP" class="form-control form-control-sm" maxlength="6" onkeypress = "return utilSigo.checkNum(event)"/>                        
+                        @Html.TextBox("txtCoordEsteDP", "", new { @class = "form-control form-control-sm", maxlength = "6", onkeypress = "return utilSigo.checkNum(event)" })
                     </div>
                     <div class="form-group col-md-4">
                         <label for="txtCoordNorteDP" class="text-small">Coordenada Norte</label>
-                        <input id="txtCoordNorteDP" class="form-control form-control-sm" maxlength="7" onkeypress="return utilSigo.checkNum(event)" />                        
+                        @Html.TextBox("txtCoordNorteDP", "", new { @class = "form-control form-control-sm", maxlength = "7", onkeypress = "return utilSigo.checkNum(event)" })
                     </div>
                     <div class="form-group col-md-4">
                         <label for="txtAltidudDP" class="text-small">Altitud</label>
-                        <input id="txtAltidudDP" class="form-control form-control-sm" maxlength="4" onkeypress="return utilSigo.checkNum(event)" />                        
-                    </div>
-                </div>
-                <div class="form-row mt-2" style="display:felx;justify-content:center;align-items: center;">
-                    <div class="form-inline text-right">
-                        <button type="button" id="btnAgregarLinea" onclick="_DivisionPredio.fnAgregarLinea()" class="btn btn-primary btn-sm">Agregar</button>
-                        <button type="button" id="btnLimpiar" onclick="_DivisionPredio.fnClearLinea()" class="btn btn-danger btn-sm">Eliminar</button>
+                        @Html.TextBox("txtAltidudDP", "", new { @class = "form-control form-control-sm", maxlength = "4", onkeypress = "return utilSigo.checkNum(event)" })
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-12">
                         <label for="txtObservacion" class="text-small">Observación</label>
-                        <textarea id="txtObservacionDP" class="form-control form-control-sm" maxlength="400" rows="3" onkeypress="return utilSigo.checkLetter(event)">@Model.OBSERVACION</textarea>
+                        @Html.TextArea("txtObservacionDP", "", new { @class = "form-control form-control-sm", maxlength = "400", rows = "3", onkeypress = "return utilSigo.checkLetter(event)" })
                     </div>
                 </div>
             </form>
